# v0-gail

./: .gitignore  README.md  alembic.ini  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: 001_create_schema.sql  ingest_only.py  run_batch.py  seed_db.py
src/: config.py  database.py  llm.py  models.py
src/agent/: adaptation_rules.py  live_agent.py  prompt_builder.py
src/api/: main.py  schemas.py
src/api/routes/: agent.py  batch.py  profiles.py  scores.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/agent/: page.tsx
src/app/api/chat/: route.ts
src/app/api/ingest/: route.ts
src/app/api/ingest/job/: route.ts
src/app/api/profile/: route.ts
src/app/chat/: page.tsx
src/app/ingest/: page.tsx
src/app/profiles/: page.tsx
src/app/profiles/[userId]/: page.tsx
src/app/users/: page.tsx
src/app/users/[id]/: page.tsx
src/components/: agent-chat.tsx  app-sidebar.tsx  profile-actions.tsx  profile-list.tsx  radar-chart.tsx  sidebar.tsx  stat-card.tsx
src/evolution/: arc_detector.py  conflict_resolver.py  snapshot.py  temporal.py
src/lib/: api.ts
src/lib/supabase/: middleware.ts
src/profile_engine/: aggregator.py  batch_processor.py  extractor.py  prompts.py
src/scoring/: calculator.py  dimensions.py  reasoning.py
tests/: conftest.py  test_agent.py  test_aggregator.py  test_api.py  test_evolution.py  test_extractor.py  test_scoring.py
